# restaurant_website

./: .gitignore  FEATURES.md  PROJECT_OVERVIEW.md  QUICKSTART.txt  README.md  SETUP.md  START_HERE.md  TROUBLESHOOTING.md  manage.py  populate_sample_data.py  pyproject.toml  requirements.txt
restaurant/: __init__.py  admin.py  admin_models.py  cart_utils.py  context_processors.py  forms.py  models.py  signals.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_alter_menuitem_price_alter_order_discount_applied_and_more.py  0003_order_customer_name_order_delivery_address_and_more.py  0004_newsfeed_video.py  0005_cart_cartitem.py  0006_salesreport_userreport_alter_cart_options_and_more.py
restaurant/templates/: admin_reports.html  base.html  base_BACKUP.html  cart.html  checkout.html  checkout_cart.html  feed_detail.html  feeds.html  index.html  login.html  menu.html  menu_BACKUP.html  menu_item_detail.html  order.html  order_confirmation.html  order_history.html  profile.html  reports_menu.html  sales_reports.html  signup.html  user_reports.html
restaurant/templates/admin/: sales_report.html
restaurant/templatetags/: custom_filters.py
restaurant_site/: __init__.py  settings.py  urls.py
