[project]
name = "restaurant-website"
version = "1.0.0"
description = "A full-stack restaurant web application with ordering system and rewards program"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["django", "restaurant", "ordering", "rewards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "django>=4.2,<5.0",
    "pillow>=10.0.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
    "django-environ>=0.11.0",
    "whitenoise>=6.6.0",
    "django-extensions>=3.2.3",
    "django-cors-headers>=4.3.1",
    "django-crispy-forms>=2.1",
    "crispy-bootstrap5>=0.7",
    "djangorestframework>=3.14.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "django-debug-toolbar>=4.2.0",
    "ipython>=8.18.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "pylint>=3.0.3",
    "pytest>=7.4.3",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
]

# Production dependencies
prod = [
    "sentry-sdk>=1.39.1",
    "django-redis>=5.4.0",
    "redis>=5.0.1",
    "django-ratelimit>=4.1.0",
]

# Testing only
test = [
    "pytest>=7.4.3",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
]

# Documentation
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/restaurant-website"
Repository = "https://github.com/yourusername/restaurant-website"
Documentation = "https://github.com/yourusername/restaurant-website#readme"
Issues = "https://github.com/yourusername/restaurant-website/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["restaurant", "restaurant_site"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "restaurant_site.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=restaurant --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["restaurant"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true